--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: black;
     text-align: center;
+    color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -14,9 +15,29 @@ body {
     color: white;
 }
 
+.heading--three {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 300;
+    font-size: 42px;
+}
+
+.heading--two {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: normal;
+    font-size: 46px;
+    text-align: center;
+    color: white;
+}
+
 /* links */
 
 #link {
     color: aquamarine;
     font-size: 16px;
+}
+
+/* footer */
+.footer {
+    text-align: right;
+    color: gray;
 }
